--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android'
 android {
     aaptOptions.useAaptPngCruncher = true
     compileSdkVersion 19
-    buildToolsVersion '19.0.3'
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         minSdkVersion 14
@@ -38,5 +38,7 @@ android {
 
 dependencies {
     compile project(':sdk')
-    compile 'com.jakewharton:butterknife:4.0.1'
+    compile 'com.jakewharton:butterknife:4.+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.volley:volley:+@aar'
 }
