--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
         minSdkVersion 8
@@ -64,7 +64,7 @@ android {
         //set the output name
         fatJar.archiveName = "7digital-android-sdk-vX.XX-withDependencies.jar"
 
-        
+
         artifacts.add('archives', slimJar);
     }
 
@@ -76,7 +76,7 @@ dependencies {
         exclude module: 'xpp3'
     }
     compile 'com.squareup.okhttp:okhttp:1.5.2'
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.3.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.1'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.1'
