--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.ben-manes.versions'
 
 android {
-    aaptOptions.useAaptPngCruncher = true
     compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "TEST_USER_EMAIL", "$TEST_USER_EMAIL"
+        buildConfigField "String", "TEST_USER_PASSWORD", "$TEST_USER_PASSWORD"
+        buildConfigField "String", "TEST_OAUTH_CONSUMER_KEY", "$TEST_OAUTH_CONSUMER_KEY"
+        buildConfigField "String", "TEST_OAUTH_CONSUMER_SECRET", "$TEST_OAUTH_CONSUMER_SECRET"
     }
 
     compileOptions {
@@ -18,7 +23,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -38,8 +43,8 @@ android {
 
 dependencies {
     compile project(':sdk')
-    compile 'com.jakewharton:butterknife:4.+'
+    compile 'com.jakewharton:butterknife:6.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.mcxiaoke.volley:library:1.0.6'
+    compile 'com.mcxiaoke.volley:library:1.0.10'
 }
