--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -54,5 +54,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.mcxiaoke.volley:library:1.0.10'
+    compile 'com.android.volley:volley:1.0.0'
 }
