--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -93,7 +93,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.0'
 
-    provided 'com.mcxiaoke.volley:library:1.0.10'
+    compile 'com.android.volley:volley:1.0.0'
 
     compile 'joda-time:joda-time:2.7'
     compile fileTree(dir: 'libs', include: ['*.jar'])
